# discard

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  pyproject.toml
src/: discard.py
tests/: test_discard.py
